--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <nav id="nav">
     <h1>WEB'S</h1>
     <ul>
-      <li><a href="#section1">menu1</a></li>
+      <li class="active"><a href="#section1">menu1</a></li>
       <li><a href="#section2">menu2</a></li>
       <li><a href="#section3">menu3</a></li>
       <li><a href="#section4">menu4</a></li>
